--- a/style.css
+++ b/style.css
@@ -24,10 +24,9 @@ main {
 .null {
     position: absolute;
     width: 100%;
-    height: 100px;
+    height: 80px;
     background-color: #4932cc;
     top: 0;
-
 }
 
 .left .menus {
@@ -72,6 +71,7 @@ header .bar{
     position: absolute;
     left: 30px;
     font-size: 35px;
+    display: none;
 }
 
 header h1 {
@@ -146,4 +146,42 @@ table th{
     background-color: #303030;
     color: #fff;
     padding: 10px 50px 10px 10px;
+}
+
+
+/* responsiveness */
+
+
+@media screen and (max-width: 1024px){
+    .totalMember{
+        width: 100%;
+        /* gap: 30px; */
+        /* flex-direction: column; */
+    }
+
+    .totalMember .box{
+        width: 150px;
+        height: auto;
+        padding: 20px;
+    }
+}
+
+@media screen and (max-width: 950px){
+    .right{
+        width: 100%;
+    }
+    .left{
+        position: absolute;
+        z-index: 999;
+        background-color: #fff;
+        width: 40%;
+        left: -100%;
+        transition: all 0.1s ease-in-out;
+    }
+
+   header .bar{
+        display: block;
+        z-index: 999;
+        /* left: 19rem; */
+    }
 }
