--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: url(/login-form/media/bg.jpg) no-repeat;
+    background: url(/media/bg.jpg) no-repeat;
     background-position: center;
     background-size: cover;
 }
