--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -15,115 +15,64 @@ main {
     display: flex;
 }
 
-/* .left {
-    width: 20%;
-    background-color: var(--bg);
-    height: 100vh;
-    display: flex;
-    position: sticky;
-    top: 0;
-}
-
-.null {
-    position: absolute;
-    width: 100%;
-    height: 75px;
-    background-color: #7571f9;
-    top: 0;
-
-}
-
-.left .menus {
-    margin-top: 10rem;
-    width: 100%;
-}
-
-.left .menus ul{
-}
-
-.left .menus ul li {
-    padding: 15px 20px;
-    width: 100%;
-    display: block;
-}
-
-.left .menus ul li i{
-    margin-right: 18px;
-    color: #4a4f53;
-    font-weight: 700;
-}
-.left .menus ul li a {
-    color: #4a4f53;
-    font-size: 18px;
-    font-weight: 700;
-}
-
-.left .menus ul li a:hover {
-    background-color: #f1f1f1;
-} */
-
-
-/* nav bar  */
+/* **********************menu bar************************** */
 
 .left {
-    height: 100vh;
     width: 20%;
-    background-color: var(--bg);
-    position: sticky;
-    top: 0;
+    position: relative;
 }
 
 .left .null {
     background-color: #7571f9;
-    height: 75px;
+    height: 100px;
+    width: 100%;
+    position: absolute;
+    top: 0;
 }
 
-.left .menus {
-    margin-top: 50px;
+.left {
+    display: flex;
 }
 
-.left .menus li a,
-.left .menus  li a i {
-    color: #4a4f53;
-    font-weight: 600;
-}
-
-
-.left .menus li i {
-    padding-right: 15px;
-    font-size: 22px;
-}
-
-.left .menus li a {
-    display: block;
-    padding: 20px 15px;
-    transition: all .3s ease;
-}
-
-.left .menus li a:hover {
-    background-color: #f1f1f1; 
-}
-
-.drop {
-    display: none;
-}
-
-.drop {
-    /* display: flex; */
+.menus {
+    width: 100%;
+    margin-top: 10rem;
+    display: flex;
     flex-direction: column;
+    gap: 10px;
+}
+
+.left .menus li {
+    padding: 10px;
+    transition: all 0.3s ease-in;
+}
+
+.left li i {
+    margin-right: 10px;
+    color: #959494;
+}
+
+.left li ul {
+    display: none;
+    margin-top: 10px;
+    margin-left: 10px;
+}
+
+.left li ul li:hover a {
+    color: black;
 }
 
 
+.left .menus li:hover {
+    background-color: #f1f1f1;
+}
 
-.drop .droplist{
-    padding-left: 30px;
+.menus li:hover ul {
+    display: block;
 }
 
 
-
-
-/* nav bar  */
-
+/* ------------------dashboard styling ----------------- */
 
 .right {
     width: 80%;
@@ -233,6 +182,84 @@ tr td {
 }
 
 
+
+
+/* ---------------add new employee section------------------- */
+
+.form-container {
+    min-height: 100vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.form-container form {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    background-color: #fff;
+    width: 60%;
+    padding: 30px 25px;
+    gap: 10px;
+    border-radius: 8px;
+    box-shadow: 1px 1px 5px black;
+}
+
+.form-container form .user-input {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    resize: none;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+form label {
+    color: #4a4f53;
+}
+
+form h3 {
+    text-align: center;
+    text-transform: capitalize;
+}
+
+form .gender {
+    display: flex;
+    gap: 20px;
+}
+
+form .user-input input,
+button {
+    padding: 10px;
+}
+
+form button {
+    width: 100%;
+    background-color: #7571f9;
+    border: none;
+    border-radius: 5px;
+    color: #fff;
+    font-weight: bold;
+}
+
+/*-------------------employee management section-------------------------*/
+
+.employee-container{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: 5rem;
+}
+
+.employee-container h3{
+    margin-bottom: 10px;
+}
+
 /* footer styling  */
 .sitefooter {
     text-align: center;
@@ -245,5 +272,3 @@ tr td {
     color: #767b7e;
     font-weight: 700;
 }
-
-/* footer styling  */
